[gd_scene load_steps=2 format=3 uid="uid://bjeybdkbf0rro"]

[ext_resource type="Script" path="res://scripts/menu_layer.gd" id="1_q0fu3"]

[node name="MenuLayer" type="CanvasLayer"]
script = ExtResource("1_q0fu3")

[node name="MenuContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="MenuPanel" type="PanelContainer" parent="MenuContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuContainer/MenuPanel"]
layout_mode = 2

[node name="Spacer" type="Control" parent="MenuContainer/MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
size_flags_vertical = 3

[node name="TitleLabel" type="Label" parent="MenuContainer/MenuPanel/VBoxContainer"]
layout_mode = 2
text = "Breakout"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="MenuContainer/MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(500, 15)
layout_mode = 2
size_flags_vertical = 3

[node name="InfoLabel" type="Label" parent="MenuContainer/MenuPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Welcome!"
horizontal_alignment = 1

[node name="Spacer7" type="Control" parent="MenuContainer/MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(500, 15)
layout_mode = 2
size_flags_vertical = 3

[node name="StartGameButton" type="Button" parent="MenuContainer/MenuPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start Game"

[node name="Spacer6" type="Control" parent="MenuContainer/MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(500, 15)
layout_mode = 2
size_flags_vertical = 3

[node name="ResumeButton" type="Button" parent="MenuContainer/MenuPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Resume"

[node name="Spacer3" type="Control" parent="MenuContainer/MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
size_flags_vertical = 3

[node name="RestartGameButton" type="Button" parent="MenuContainer/MenuPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Restart Game"

[node name="Spacer5" type="Control" parent="MenuContainer/MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
size_flags_vertical = 3

[node name="QuitButton" type="Button" parent="MenuContainer/MenuPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"

[node name="Spacer4" type="Control" parent="MenuContainer/MenuPanel/VBoxContainer"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
size_flags_vertical = 3
